<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_bg">

    <ImageView
        android:id="@+id/iv_login_icon"
        android:layout_width="@dimen/dimen_60"
        android:layout_height="@dimen/dimen_60"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dimen_30"
        android:layout_marginTop="@dimen/dimen_30"
        android:background="@mipmap/ic_launcher"/>

    <LinearLayout
        android:id="@+id/ll_login_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_login_icon"
        android:orientation="vertical">

        <com.yunliaoim.firechat.ui.ClearEditText
            android:id="@+id/et_login_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_55"
            android:background="@color/white"
            android:hint="@string/login_username"
            android:padding="@dimen/dimen_10"/>

        <include layout="@layout/divider_horizontal_view"/>

        <com.yunliaoim.firechat.ui.ClearEditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_55"
            android:background="@color/white"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:padding="@dimen/dimen_10"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_login_edit"
        android:padding="@dimen/dimen_15">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cb_remember_password"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_50"
            android:layout_alignParentLeft="true"
            android:text="记住密码"/>

        <TextView
            android:id="@+id/tv_login_register"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_50"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:text="@string/login_register"
            android:textColor="@color/main_color"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_35"
        android:layout_below="@+id/rl_account"
        android:layout_marginLeft="@dimen/dimen_15"
        android:layout_marginRight="@dimen/dimen_15"
        android:background="@drawable/main_button_bg"
        android:padding="@dimen/dimen_1"
        android:text="@string/login_button_unlogin_text"
        android:textColor="@color/white"/>

</RelativeLayout>