<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="@drawable/main_bg"
              android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <include layout="@layout/toolbar_layout"/>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_10"
            android:orientation="vertical" >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayout_Style"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/TextInputLayout_Error_Msg_Style">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/acet_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_16"
                    android:hint="@string/hint_input_username"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayout_Style"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/TextInputLayout_Error_Msg_Style">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/acet_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="@dimen/sp_16"
                    android:hint="@string/hint_input_password"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_repassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayout_Style"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/TextInputLayout_Error_Msg_Style">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/acet_repassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="@dimen/sp_16"
                    android:hint="@string/hint_input_repassword"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_register_ok"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_35"
                android:background="@drawable/main_button_bg"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/white"
                android:text="@string/btn_register_title" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_register_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@color/transparency"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            android:text="@string/cancel" />
    </RelativeLayout>

</LinearLayout>